--- a/themes/particlex/layout/posts.ejs
+++ b/themes/particlex/layout/posts.ejs
@@ -6,6 +6,25 @@
             y = b.pinned ?? 0;
         return x === y ? b.date - a.date : y - x;
     });
+
+    //自定义排序内容
+    posts.data = posts.data.sort(function(a, b) {
+        if(a.top && b.top) { // 两篇文章都有top，top大的在前
+            if(a.top == b.top)
+                return b.date - a.date; // 若top值一样，最新的文章在前面
+            else
+                return b.top - a.top; // top大的在前面
+        }
+        else if(a.top && !b.top) { // 以下是只有一篇文章top有定义，那么将有top的排在前面
+            return -1;
+        }
+        else if(!a.top && b.top) {
+            return 1;
+        }
+        else return b.date - a.date; 	//都没有top标签，最新的文章在前面
+    });
+    
+    
     posts = posts.slice(current, config.index_generator.per_page + current);
 %>
 <% posts.forEach(post => { %>
